2005-08-09  Philippe Elie  <phil.el@wanadoo.fr>

	* module/x86/cpu_type.c: fix #1254390, problem and solution
	  by Thomas Kho <tkho@users.sourceforge.net>

	* module/oprofile.c:
	* module/oprofile.h: fix a compilation problem with gcc <= 3.3. It's
	  not worth to try to continue to use fastcall for op_do_profile.

	* module/x86/op_model_p4.c: backport some change from the 2.6 driver:
	  on some P4 model 3 IQ_ESCR0/1 doesn't exist and acessing them fault.

2005-08-08  Philippe Elie  <phil.el@wanadoo.fr>

	* doc/opcontrol.1.in:
	* doc/oprofile.xml: document opcontrol --buffer-watershed

	* gui/oprof_start.cpp:
	* gui/oprof_start_config.cpp:
	* gui/oprof_start_config.h:
	* gui/ui/oprof_start.base.ui:
	* utils/opcontrol: implement 2.6 buffer_watershed

2005-08-07  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/file_manip.h:
	* libutil++/file_manip.cpp: use iostream to copy file
	* libpp/populate.cpp: check_mtime() even when using archive: spec
	* pp/oparchive.cpp: fix comment

2005-08-07  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/opreport.cpp: don't throw a std::string but an op_runtime_error

2005-08-07  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/oprofiled.c:
	* daemon/liblegacy/init.c:
	* daemon/liblegacy/opd_image.c:
	* daemon/liblegacy/opd_parse_proc.c:
	* gui/oprof_start.cpp:
	* gui/oprof_start_util.cpp:
	* libdb/db_debug.c:
	* libdb/db_insert.c:
	* libdb/db_manage.c:
	* libdb/tests/db_test.c:
	* libop/op_events.c:
	* libop/tests/alloc_counter_tests.c:
	* libop/tests/parse_event_tests.c:
	* libopt++/popt_options.cpp:
	* libpp/arrange_profiles.cpp:
	* libpp/callgraph_container.cpp:
	* libpp/filename_spec.cpp:
	* libpp/image_errors.cpp:
	* libpp/name_storage.cpp:
	* libpp/profile_container.cpp:
	* libpp/profile_spec.cpp:
	* libregex/op_regex.cpp:
	* libregex/tests/regex_test.cpp:
	* libutil++/string_manip.cpp:
	* pp/opannotate.cpp:
	* pp/opgprof_options.cpp:
	* pp/opreport.cpp:
	* pp/opreport_options.cpp:
	* utils/ophelp.c: coding style
